--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Dashboard</title>
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <script src="js/script.js"></script>
+    <script src="app/js/script.js"></script>
 </body>
 </html>
