--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="media/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="dist/style.css">
+    <script defer src="app/js/script.js"></script>
 </head>
 <body>
-
-    <script src="app/js/script.js"></script>
+    <h1>Social Media Dashboard</h1>
 </body>
 </html>
