complete top cards

--- a/index.html
+++ b/index.html
@@ -75,8 +75,20 @@
         </section>
 
         <section class="container">
-            Overview - Today 
-        
+            <div>
+                <h2>Overview - Today</h2> 
+            </div>
+
+            <div class="small-cards">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>7</div>
+                <div>8</div>
+            </div>
             Page Views 87 3% 
             Likes 52 2% 
             Likes 5462 2257% 
