add small card style

--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@
             </div>
 
             <div class="small-cards">
-                <div>1</div>
+                <div class="card card__small">
+                    <div>Page Views</div>
+                    <div class="icon"><img src="media/images/icon-facebook.svg" alt="Facebook"></div>
+                    <div class="big-text">87</div>
+                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="">3%</div>
+                </div>
+
+
                 <div>2</div>
                 <div>3</div>
                 <div>4</div>
