complete small cards

--- a/index.html
+++ b/index.html
@@ -84,26 +84,58 @@
                     <div>Page Views</div>
                     <div class="icon"><img src="media/images/icon-facebook.svg" alt="Facebook"></div>
                     <div class="big-text">87</div>
-                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="">3%</div>
+                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="up arrow">3%</div>
                 </div>
 
+                <div class="card card__small">
+                    <div>Likes</div>
+                    <div class="icon"><img src="media/images/icon-facebook.svg" alt="Facebook"></div>
+                    <div class="big-text">52</div>
+                    <div class="card__change card__change--smDown"><img src="media/images/icon-down.svg" alt="down arrow">2%</div>
+                </div>
 
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>7</div>
-                <div>8</div>
+                <div class="card card__small">
+                    <div>Likes</div>
+                    <div class="icon"><img src="media/images/icon-instagram.svg" alt="Instagram"></div>
+                    <div class="big-text">5462</div>
+                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="up arrow">2257%</div>
+                </div>
+
+                <div class="card card__small">
+                    <div>Profile Views</div>
+                    <div class="icon"><img src="media/images/icon-facebook.svg" alt="Instagram"></div>
+                    <div class="big-text">52k</div>
+                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="up arrow">1375%</div>
+                </div>
+
+                <div class="card card__small">
+                    <div>Retweets</div>
+                    <div class="icon"><img src="media/images/icon-twitter.svg" alt="Twitter"></div>
+                    <div class="big-text">117</div>
+                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="up arrow">303%</div>
+                </div>
+
+                <div class="card card__small">
+                    <div>Likes</div>
+                    <div class="icon"><img src="media/images/icon-twitter.svg" alt="Twitter"></div>
+                    <div class="big-text">507</div>
+                    <div class="card__change card__change--smUp"><img src="media/images/icon-up.svg" alt="up arrow">553%</div>
+                </div>
+
+                <div class="card card__small">
+                    <div>Likes</div>
+                    <div class="icon"><img src="media/images/icon-youtube.svg" alt="Youtube"></div>
+                    <div class="big-text">107</div>
+                    <div class="card__change card__change--smDown"><img src="media/images/icon-down.svg" alt="down arrow">19%</div>
+                </div>
+
+                <div class="card card__small">
+                    <div>Total Views</div>
+                    <div class="icon"><img src="media/images/icon-youtube.svg" alt="Youtube"></div>
+                    <div class="big-text">1407</div>
+                    <div class="card__change card__change--smDown"><img src="media/images/icon-down.svg" alt="down arrow">12%</div>
+                </div>
             </div>
-            Page Views 87 3% 
-            Likes 52 2% 
-            Likes 5462 2257% 
-            Profile Views 52k 1375% 
-            Retweets 117 303% 
-            Likes 507 553% 
-            Likes 107 19% 
-            Total Views 1407 12% 
         </section>
     </main>
 </body>
