--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         </div>
 
         <fieldset class="header__toggle toggle" aria-label="theme toggle" role="radiogroup">
-            <label for="dark">Dark Mode</label>
+            <label>Dark Mode</label>
             <div class="toggle__wrapper">
                 <input type="radio" name="theme" id="dark">
                 <input type="radio" name="theme" id="light" >
                 <span aria-hidden="true" class="toggle__background"></span>
                 <span aria-hidden="true" class="toggle__button"></span>
             </div>
-            <label for="light"></label>
         </fieldset>
     </header>
 
