--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="dist/style.css">
     <script defer src="dist/script.js"></script>
 </head>
-<body>
+<body class="body">
     <header class="header container">
 
         <div class="header__title">
